Atualização em "News" e Carreiras"

--- a/carreira/index.html
+++ b/carreira/index.html
@@ -50,8 +50,22 @@ title: Carreira
 				<div class="col-md-3">
 					<div class="jumbotron">
 				        <h2>Programador Java Sênior</h2>
-				        <a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-master">candidatar-se</a>
+				        <a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 				        <a class=" btn-master" data-toggle="modal" data-target="#rj-vaga-1">saiba mais</a>
+				    </div>
+			    </div>
+			    <div class="col-md-3">
+					<div class="jumbotron">
+				        <h2>Programador PHP SR</h2>
+				        <a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
+				        <a class=" btn-master" data-toggle="modal" data-target="#rj-vaga-2">saiba mais</a>
+				    </div>
+			    </div>
+			    <div class="col-md-3">
+					<div class="jumbotron">
+				        <h2>Desenvolvedor Web</h2>
+				        <a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
+				        <a class=" btn-master" data-toggle="modal" data-target="#rj-vaga-3">saiba mais</a>
 				    </div>
 			    </div>
 			</div>
@@ -282,7 +296,67 @@ title: Carreira
 				  </div>
 			      <div class="modal-footer">
 					<a type="button" class="btn-lg btn-master" data-dismiss="modal">fechar</a>
-			       	<a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-lg btn-master">candidatar-se</a>
+			       	<a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-lg btn-master">candidatar-se</a>
+			      </div>
+			    </div>
+			  </div>
+			</div>
+
+			<div class="modal fade" id="rj-vaga-2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			  <div class="modal-dialog">
+			    <div class="modal-content">
+			      <div class="modal-header">
+			        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			        <h2 class="modal-title" id="myModalLabel">Programador PHP SR</h2>
+			      </div>
+			      <div class="modal-body">
+					<h4>O que esperamos do candidato:</h4>
+		        	<ul>			   
+						<li>Buscamos um Programador com sólidos conhecimentos em PHP e Magento Commerce. </li>
+						<li>Saber JQuery é um grande diferencial.</li>
+					<ul>
+					<h4>O que oferecemos:</h4>
+					<ul>
+						<li> Oportunidade de trabalhar em um time de pessoas dedicadas e que amam o que fazem.</li>
+						<li> Projetos 100% desenvolvidos utilizando metodologias ágeis.</li>
+						<li> Valorização das pessoas e não de processos.</li>
+						<li> Salário compatível com o mercado.</li>
+					</ul>
+					<h5>Enviar currículo com pretensão salarial.</h5>
+				  </div>
+			      <div class="modal-footer">
+					<a type="button" class="btn-lg btn-master" data-dismiss="modal">fechar</a>
+			       	<a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-lg btn-master">candidatar-se</a>
+			      </div>
+			    </div>
+			  </div>
+			</div>
+
+			<div class="modal fade" id="rj-vaga-3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			  <div class="modal-dialog">
+			    <div class="modal-content">
+			      <div class="modal-header">
+			        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			        <h2 class="modal-title" id="myModalLabel">Desenvolvedor Web</h2>
+			      </div>
+			      <div class="modal-body">
+					<h4>O que esperamos do candidato:</h4>
+		        	<ul>			   
+						<li>Buscamos um Desenvolvedor Web client side com conhecimentos em Magento Commerce.</li>
+						<li>Saber Html5, CSS3, JQuery e Prototype é um grande diferencial.</li>
+					<ul>
+					<h4>O que oferecemos:</h4>
+					<ul>
+						<li> Oportunidade de trabalhar em um time de pessoas dedicadas e que amam o que fazem.</li>
+						<li> Projetos 100% desenvolvidos utilizando metodologias ágeis.</li>
+						<li> Valorização das pessoas e não de processos.</li>
+						<li> Salário compatível com o mercado.</li>
+					</ul>
+					<h5>Enviar currículo com pretensão salarial.</h5>
+				  </div>
+			      <div class="modal-footer">
+					<a type="button" class="btn-lg btn-master" data-dismiss="modal">fechar</a>
+			       	<a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-lg btn-master">candidatar-se</a>
 			      </div>
 			    </div>
 			  </div>
