--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ is_index: true
 			    <div class="col-md-6">
 			    	<header>
 						<h2 class="title-news">Aprenda a fazer a sua loja mobile para tablet ou celular</h2>
-						<h6 class="author-news">Por: Isabella Sánchez</h6>
+						<h6 class="author-news">Por: Isabella Sanchéz, Revista W</h6>
 					</header>
 					<p> Tudo o que você precisa saber para entrar no comércio eletrônico que mais cresce no Brasil e no mundo. Veja a opinião de Victor Lima, gerente da nossa área mobile, na Revista W deste mês.</p>
 					<a href="ecomerce.pdf" target="_blank" class="btn-master">ler mais</a>
