Atualização do news

--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@ is_index: true
 			<div class="row">
 			    <div class="col-md-6">
 			    	<header>
-						<h2 class="title-news">Aprenda a fazer a sua loja mobile para tablet ou celular</h2>
-						<h6 class="author-news">Por: Isabella Sanchéz, Revista W</h6>
+						<h2 class="title-news">Marco Civil da Internet</h2>
+						<h6 class="author-news">Por: Maurício Duarte - Revista Administrador Profissional (CRA-SP)</h6>
 					</header>
-					<p> Tudo o que você precisa saber para entrar no comércio eletrônico que mais cresce no Brasil e no mundo. Veja a opinião de Victor Lima, gerente da nossa área mobile, na Revista W deste mês.</p>
-					<a href="ecomerce.pdf" target="_blank" class="btn-master">ler mais</a>
+					<p>Marco Civil da Internet - Saiba como a nov alei que estabelece direitos e deveres na rede afeta usuários e empresas. Entrevista com Fernando de la Riva.</p>
+					<a href="http://www.crasp.gov.br/crasp/rap/?edicao=8914&pagina=1" target="_blank" class="btn-master">ler mais</a>
 				</div>
 				<div class="col-md-6">
-					<a href="http://exame.abril.com.br/pme/noticias/o-que-todo-empreendedor-digital-deve-ler" target="_blank"><img alt="News" class="align-right" src="img/img-ecomerce.jpg"></a>
+					<a href="http://exame.abril.com.br/pme/noticias/o-que-todo-empreendedor-digital-deve-ler" target="_blank"><img alt="News" class="align-right" src="img/img-mobile.jpg"></a>
 			    </div>
 			</div>
 		</div>
