Alterações vaga fix e rio de janeiro

--- a/carreira/index.html
+++ b/carreira/index.html
@@ -19,29 +19,29 @@ title: Carreira
 				<div class="col-md-3">
 					<div class="jumbotron">
 				        <h2>Desenvolvendor Android Jr.</h2>
+				        <a class="btn-master" data-toggle="modal" data-target="#sp-vaga-1">saiba mais</a>
 						<a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-master">candidatar-se</a>
-						<a class="btn-master" data-toggle="modal" data-target="#sp-vaga-1">saiba mais</a>
 				    </div>
 				</div>
 				<div class="col-md-3">
 			    	<div class="jumbotron">
 						<h2>Desenvolvedor Android Pleno</h2>
-						<a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 						<a class="btn-master" data-toggle="modal" data-target="#sp-vaga-2">saiba mais</a>
+						<a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div class="jumbotron">
 						<h2>Desenvolvedor Android Sênior</h2>
-						<a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 						<a class="btn-master" data-toggle="modal" data-target="#sp-vaga-3">saiba mais</a>
+						<a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 				    </div>
 				</div>
 			    <div class="col-md-3">			       
 					<div class="jumbotron">
 					    <h2>Desenvolvedor Ruby</h2>
-					    <a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 					    <a class=" btn-master" data-toggle="modal" data-target="#sp-vaga-4">saiba mais</a>
+					    <a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 				    </div>	
 				</div>			       
 			</div>
@@ -49,23 +49,44 @@ title: Carreira
 				<h2 class="secondary-title"><span class="purple">//</span> Rio de Janeiro<h2>
 				<div class="col-md-3">
 					<div class="jumbotron">
+				        <h2>Desenvolvendor Android Jr.</h2>
+				        <a class="btn-master" data-toggle="modal" data-target="#sp-vaga-1">saiba mais</a>
+						<a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
+				    </div>
+				</div>
+				<div class="col-md-3">
+			    	<div class="jumbotron">
+						<h2>Desenvolvedor Android Pleno</h2>
+						<a class="btn-master" data-toggle="modal" data-target="#sp-vaga-2">saiba mais</a>
+						<a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="jumbotron">
+						<h2>Desenvolvedor Android Sênior</h2>
+						<a class="btn-master" data-toggle="modal" data-target="#sp-vaga-3">saiba mais</a>
+						<a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
+				    </div>
+				</div>
+				<div class="col-md-3">
+					<div class="jumbotron">
 				        <h2>Programador Java Sênior</h2>
-				        <a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 				        <a class=" btn-master" data-toggle="modal" data-target="#rj-vaga-1">saiba mais</a>
+				        <a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 				    </div>
 			    </div>
 			    <div class="col-md-3">
 					<div class="jumbotron">
 				        <h2>Programador PHP SR</h2>
-				        <a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 				        <a class=" btn-master" data-toggle="modal" data-target="#rj-vaga-2">saiba mais</a>
+				        <a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 				    </div>
 			    </div>
 			    <div class="col-md-3">
 					<div class="jumbotron">
 				        <h2>Desenvolvedor Web</h2>
-				        <a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 				        <a class=" btn-master" data-toggle="modal" data-target="#rj-vaga-3">saiba mais</a>
+				        <a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 				    </div>
 			    </div>
 			</div>
@@ -80,22 +101,16 @@ title: Carreira
 				<div class="col-md-3">
 					<div class="jumbotron">
 				        <h2>DBA/AD</h2>
-				        <a href="mailto:rh@fixsupport.com.br" class="btn-master">candidatar-se</a>
 				        <a class="btn-master" data-toggle="modal" data-target="#fix-vaga-1">saiba mais</a>
-				    </div>
-			    </div>
-			    <div class="col-md-4">
-					<div class="jumbotron">
-				        <h2>Operação Telecom Pleno</h2>
 				        <a href="mailto:rh@fixsupport.com.br" class="btn-master">candidatar-se</a>
-						<a class="btn-master" data-toggle="modal" data-target="#fix-vaga-2">saiba mais</a>
 				    </div>
 			    </div>
+			    
 			    <div class="col-md-4">
 					<div class="jumbotron">
 				        <h2>Suporte Publicação</h2>
+				         <a class="btn-master" data-toggle="modal" data-target="#fix-vaga-3">saiba mais</a>
 				        <a href="mailto:rh@fixsupport.com.br" class="btn-master">candidatar-se</a>
-				        <a class="btn-master" data-toggle="modal" data-target="#fix-vaga-3">saiba mais</a>
 				    </div>
 			    </div>
 			</div>
@@ -118,7 +133,7 @@ title: Carreira
 					</ul>
 					<h4>O que oferecemos:</h4>
 					<ul>
-						<li> Ajuda de custo para pessoas que não sejam da cidade de São Paulo e que queiram vir trabalhar conosco.</li>
+						<li> Ajuda de custo para pessoas que não sejam da cidade e que queiram vir trabalhar conosco.</li>
 						<li> Oportunidade de trabalhar em um time de pessoas dedicadas e que amam o que fazem.</li>
 						<li> Projetos 100% desenvolvidos utilizando metodologias ágeis.</li>
 						<li> Valorização das pessoas e não de processos.</li>
@@ -162,7 +177,7 @@ title: Carreira
 					</ul>
 					<h4>O que oferecemos:</h4>
 					<ul>
-						<li> Ajuda de custo para pessoas que não sejam da cidade de São Paulo e que queiram vir trabalhar conosco.</li>
+						<li> Ajuda de custo para pessoas que não sejam da cidade e que queiram vir trabalhar conosco.</li>
 						<li> Oportunidade de trabalhar em um time de pessoas dedicadas e que amam o que fazem.</li>
 						<li> Projetos 100% desenvolvidos utilizando metodologias ágeis.</li>
 						<li> Valorização das pessoas e não de processos.</li>
@@ -211,7 +226,7 @@ title: Carreira
 					</ul>
 					<h4>O que oferecemos:</h4>
 					<ul>
-						<li> Ajuda de custo para pessoas que não sejam da cidade de São Paulo e que queiram vir trabalhar conosco.</li>
+						<li> Ajuda de custo para pessoas que não sejam da cidade e que queiram vir trabalhar conosco.</li>
 						<li> Oportunidade de trabalhar em um time de pessoas dedicadas e que amam o que fazem.</li>
 						<li> Projetos 100% desenvolvidos utilizando metodologias ágeis.</li>
 						<li> Valorização das pessoas e não de processos.</li>
