Alteração titulo da vaga

--- a/carreira/index.html
+++ b/carreira/index.html
@@ -77,7 +77,7 @@ title: Carreira
 			    </div>
 			    <div class="col-md-3">
 					<div class="jumbotron">
-				        <h2>Programador PHP SR</h2>
+				        <h2>Programador PHP Sr. - Magento</h2>
 				        <a class=" btn-master" data-toggle="modal" data-target="#rj-vaga-2">saiba mais</a>
 				        <a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 				    </div>
