correção de bugs no Iphone

--- a/carreira/index.html
+++ b/carreira/index.html
@@ -124,7 +124,7 @@ title: Carreira
 			</div>
 
 			<!-- Modal -->
-			<div class="modal fade" id="sp-vaga-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal" id="sp-vaga-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
@@ -156,7 +156,7 @@ title: Carreira
 			  </div>
 			</div>
 
-			<div class="modal fade" id="sp-vaga-2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal" id="sp-vaga-2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
@@ -200,7 +200,7 @@ title: Carreira
 			  </div>
 			</div>
 
-			<div class="modal fade" id="sp-vaga-3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal" id="sp-vaga-3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
@@ -249,7 +249,7 @@ title: Carreira
 			  </div>
 			</div>
 
-			<div class="modal fade" id="sp-vaga-4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal" id="sp-vaga-4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
@@ -289,7 +289,7 @@ title: Carreira
 			  </div>
 			</div>
 
-			<div class="modal fade" id="rj-vaga-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal" id="rj-vaga-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
@@ -325,7 +325,7 @@ title: Carreira
 			  </div>
 			</div>
 
-			<div class="modal fade" id="rj-vaga-2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal" id="rj-vaga-2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
@@ -355,7 +355,7 @@ title: Carreira
 			  </div>
 			</div>
 
-			<div class="modal fade" id="rj-vaga-3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal" id="rj-vaga-3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
@@ -385,7 +385,7 @@ title: Carreira
 			  </div>
 			</div>
 			
-			<div class="modal fade" id="fix-vaga-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal" id="fix-vaga-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
@@ -428,7 +428,7 @@ title: Carreira
 			  </div>
 			</div>
 
-			<div class="modal fade" id="fix-vaga-2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal" id="fix-vaga-2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
@@ -479,7 +479,7 @@ title: Carreira
 			  </div>
 			</div>
 
-			<div class="modal fade" id="fix-vaga-3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal" id="fix-vaga-3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
@@ -529,7 +529,7 @@ title: Carreira
 			  </div>
 			</div>
 			
-				<div class="modal fade" id="fix-vaga-4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				<div class="modal" id="fix-vaga-4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
