correções de bug iphone

--- a/carreira/index.html
+++ b/carreira/index.html
@@ -11,7 +11,7 @@ title: Carreira
 	</section>
 	<section id="jobs" class="box">
 		<div class="container">
-			<header><h1 class="title"> Carreira</h1></header>
+			<header><h1 class="title">Carreira</h1></header>
 			<p class="text-carreira">Nossas equipes são ágeis, autogerenciadas e auto-organizadas, ou seja, os próprios membros elegem quem será o responsável por determinada tarefa e cobram a realização dela. Também adoramos compartilhar conhecimento e colocamos todas as nossas ideias no nosso Blog. Procuramos relações duradouras e investimos em boas ideias.</p>
 			
 			<div class="row">
@@ -19,28 +19,28 @@ title: Carreira
 				<div class="col-md-3">
 					<div class="jumbotron">
 				        <h2>Desenvolvendor Android Jr.</h2>
-				        <a class="btn-master" data-toggle="modal" data-target="#sp-vaga-1">saiba mais</a>
+				        <a class="btn-master" onclick= "document.getElementById('sp-vaga-1').style.display = 'block';">saiba mais</a>
 						<a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 				    </div>
 				</div>
 				<div class="col-md-3">
 			    	<div class="jumbotron">
 						<h2>Desenvolvedor Android Pleno</h2>
-						<a class="btn-master" data-toggle="modal" data-target="#sp-vaga-2">saiba mais</a>
+						<a class="btn-master" onclick= "document.getElementById('sp-vaga-2').style.display = 'block';">saiba mais</a>
 						<a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div class="jumbotron">
 						<h2>Desenvolvedor Android Sênior</h2>
-						<a class="btn-master" data-toggle="modal" data-target="#sp-vaga-3">saiba mais</a>
+						<a class="btn-master" onclick= "document.getElementById('sp-vaga-3').style.display = 'block';">saiba mais</a>
 						<a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 				    </div>
 				</div>
 			    <div class="col-md-3">			       
 					<div class="jumbotron">
 					    <h2>Desenvolvedor Ruby</h2>
-					    <a class=" btn-master" data-toggle="modal" data-target="#sp-vaga-4">saiba mais</a>
+					    <a class=" btn-master" onclick= "document.getElementById('sp-vaga-4').style.display = 'block';">saiba mais</a>
 					    <a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 				    </div>	
 				</div>			       
@@ -50,42 +50,42 @@ title: Carreira
 				<div class="col-md-3">
 					<div class="jumbotron">
 				        <h2>Desenvolvendor Android Jr.</h2>
-				        <a class="btn-master" data-toggle="modal" data-target="#sp-vaga-1">saiba mais</a>
+				        <a class="btn-master" onclick= "document.getElementById('sp-vaga-1').style.display = 'block';">saiba mais</a>
 						<a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 				    </div>
 				</div>
 				<div class="col-md-3">
 			    	<div class="jumbotron">
 						<h2>Desenvolvedor Android Pleno</h2>
-						<a class="btn-master" data-toggle="modal" data-target="#sp-vaga-2">saiba mais</a>
+						<a class="btn-master" onclick= "document.getElementById('sp-vaga-2').style.display = 'block';">saiba mais</a>
 						<a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div class="jumbotron">
 						<h2>Desenvolvedor Android Sênior</h2>
-						<a class="btn-master" data-toggle="modal" data-target="#sp-vaga-3">saiba mais</a>
+						<a class="btn-master" onclick= "document.getElementById('sp-vaga-3').style.display = 'block';">saiba mais</a>
 						<a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 				    </div>
 				</div>
 				<div class="col-md-3">
 					<div class="jumbotron">
 				        <h2>Programador Java Sênior</h2>
-				        <a class=" btn-master" data-toggle="modal" data-target="#rj-vaga-1">saiba mais</a>
+				        <a class=" btn-master" onclick= "document.getElementById('rj-vaga-1').style.display = 'block';">saiba mais</a>
 				        <a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 				    </div>
 			    </div>
 			    <div class="col-md-3">
 					<div class="jumbotron">
 				        <h2 style="font-size: 18px;">Programador PHP Sr. - Magento</h2>
-				        <a class=" btn-master" data-toggle="modal" data-target="#rj-vaga-2">saiba mais</a>
+				        <a class=" btn-master"onclick= "document.getElementById('rj-vaga-2').style.display = 'block';">saiba mais</a>
 				        <a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 				    </div>
 			    </div>
 			    <div class="col-md-3">
 					<div class="jumbotron">
 				        <h2>Desenvolvedor Web</h2>
-				        <a class=" btn-master" data-toggle="modal" data-target="#rj-vaga-3">saiba mais</a>
+				        <a class=" btn-master" onclick= "document.getElementById('rj-vaga-3').style.display = 'block';">saiba mais</a>
 				        <a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-master">candidatar-se</a>
 				    </div>
 			    </div>
@@ -101,7 +101,7 @@ title: Carreira
 				<div class="col-md-3">
 					<div class="jumbotron">
 				        <h2>DBA/AD</h2>
-				        <a class="btn-master" data-toggle="modal" data-target="#fix-vaga-1">saiba mais</a>
+				        <a class="btn-master"onclick= "document.getElementById('fix-vaga-1').style.display = 'block';">saiba mais</a>
 				        <a href="mailto:rh@fixsupport.com.br" class="btn-master">candidatar-se</a>
 				    </div>
 			    </div>
@@ -109,7 +109,7 @@ title: Carreira
 			    <div class="col-md-4">
 					<div class="jumbotron">
 				        <h2>Suporte Publicação</h2>
-				         <a class="btn-master" data-toggle="modal" data-target="#fix-vaga-3">saiba mais</a>
+				         <a class="btn-master" onclick= "document.getElementById('fix-vaga-3').style.display = 'block';">saiba mais</a>
 				        <a href="mailto:rh@fixsupport.com.br" class="btn-master">candidatar-se</a>
 				    </div>
 			    </div>
@@ -117,7 +117,7 @@ title: Carreira
 			     <div class="col-md-4">
 					<div class="jumbotron">
 				        <h2>Desenvolvedor Web</h2>
-				         <a class="btn-master" data-toggle="modal" data-target="#fix-vaga-4">saiba mais</a>
+				         <a class="btn-master" onclick= "document.getElementById('fix-vaga-4').style.display = 'block';">saiba mais</a>
 				        <a href="mailto:rh@fixsupport.com.br" class="btn-master">candidatar-se</a>
 				    </div>
 			    </div>
@@ -128,7 +128,7 @@ title: Carreira
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
-			        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			        <button type="button" class="close" onclick= "document.getElementById('sp-vaga-1').style.display = 'none';">&times;</button>
 			        <h2 class="modal-title" id="myModalLabel">Desenvolvendor Android Jr</h2>
 			      </div>
 			      <div class="modal-body">
@@ -149,7 +149,7 @@ title: Carreira
 					</ul>
 			      </div>
 			      <div class="modal-footer">
-					<a type="button" class="btn-lg btn-master" data-dismiss="modal">fechar</a>
+					<a type="button" class="btn-lg btn-master" onclick= "document.getElementById('sp-vaga-1').style.display = 'none';">fechar</a>
 			       	<a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-lg btn-master">candidatar-se</a>
 			      </div>
 			    </div>
@@ -160,7 +160,7 @@ title: Carreira
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
-			        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			        <button type="button" class="close" onclick= "document.getElementById('sp-vaga-2').style.display = 'none';">&times;</button>
 			        <h2 class="modal-title" id="myModalLabel">Desenvolvedor Android Pleno</h2>
 			      </div>
 			      <div class="modal-body">
@@ -193,7 +193,7 @@ title: Carreira
 					</ul>
 				</div>
 			      <div class="modal-footer">
-					<a type="button" class="btn-lg btn-master" data-dismiss="modal">fechar</a>
+					<a type="button" class="btn-lg btn-master" onclick= "document.getElementById('sp-vaga-2').style.display = 'none';">fechar</a>
 			       	<a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-lg btn-master">candidatar-se</a>
 			      </div>
 			    </div>
@@ -204,7 +204,7 @@ title: Carreira
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
-			        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			        <button type="button" class="close" onclick= "document.getElementById('sp-vaga-3').style.display = 'none';">&times;</button>
 			        <h2 class="modal-title" id="myModalLabel">Desenvolvedor Android Sênior</h2>
 			      </div>
 			      <div class="modal-body">
@@ -242,7 +242,7 @@ title: Carreira
 					</ul>
 				  </div>
 			      <div class="modal-footer">
-					<a type="button" class="btn-lg btn-master" data-dismiss="modal">fechar</a>
+					<a type="button" class="btn-lg btn-master" onclick= "document.getElementById('sp-vaga-3').style.display = 'none';">fechar</a>
 			       	<a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-lg btn-master">candidatar-se</a>
 			      </div>
 			    </div>
@@ -253,7 +253,7 @@ title: Carreira
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
-			        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			        <button type="button" class="close" onclick= "document.getElementById('sp-vaga-4').style.display = 'none';">&times;</button>
 			        <h2 class="modal-title" id="myModalLabel">Desenvolvedor Ruby</h2>
 			      </div>
 			      <div class="modal-body">
@@ -282,7 +282,7 @@ title: Carreira
 					</ul>
 				  </div>
 			      <div class="modal-footer">
-					<a type="button" class="btn-lg btn-master" data-dismiss="modal">fechar</a>
+					<a type="button" class="btn-lg btn-master"onclick= "document.getElementById('sp-vaga-4').style.display = 'none';">fechar</a>
 			       	<a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-lg btn-master">candidatar-se</a>
 			      </div>
 			    </div>
@@ -293,7 +293,7 @@ title: Carreira
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
-			        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			        <button type="button" class="close" onclick= "document.getElementById('rj-vaga-1').style.display = 'none';">&times;</button>
 			        <h2 class="modal-title" id="myModalLabel">Programador Java Sênior</h2>
 			      </div>
 			      <div class="modal-body">
@@ -318,7 +318,7 @@ title: Carreira
 					</ul>
 				  </div>
 			      <div class="modal-footer">
-					<a type="button" class="btn-lg btn-master" data-dismiss="modal">fechar</a>
+					<a type="button" class="btn-lg btn-master" onclick= "document.getElementById('rj-vaga-1').style.display = 'none';">fechar</a>
 			       	<a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-lg btn-master">candidatar-se</a>
 			      </div>
 			    </div>
@@ -329,7 +329,7 @@ title: Carreira
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
-			        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			        <button type="button" class="close" onclick= "document.getElementById('rj-vaga-2').style.display = 'none';">&times;</button>
 			        <h2 class="modal-title" id="myModalLabel">Programador PHP SR</h2>
 			      </div>
 			      <div class="modal-body">
@@ -348,7 +348,7 @@ title: Carreira
 					<h5>Enviar currículo com pretensão salarial.</h5>
 				  </div>
 			      <div class="modal-footer">
-					<a type="button" class="btn-lg btn-master" data-dismiss="modal">fechar</a>
+					<a type="button" class="btn-lg btn-master" onclick= "document.getElementById('rj-vaga-2').style.display = 'none';">fechar</a>
 			       	<a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-lg btn-master">candidatar-se</a>
 			      </div>
 			    </div>
@@ -359,7 +359,7 @@ title: Carreira
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
-			        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			        <button type="button" class="close" onclick= "document.getElementById('rj-vaga-3').style.display = 'none';">&times;</button>
 			        <h2 class="modal-title" id="myModalLabel">Desenvolvedor Web</h2>
 			      </div>
 			      <div class="modal-body">
@@ -378,7 +378,7 @@ title: Carreira
 					<h5>Enviar currículo com pretensão salarial.</h5>
 				  </div>
 			      <div class="modal-footer">
-					<a type="button" class="btn-lg btn-master" data-dismiss="modal">fechar</a>
+					<a type="button" class="btn-lg btn-master" onclick= "document.getElementById('rj-vaga-3').style.display = 'none';">fechar</a>
 			       	<a href="mailto:recrutamentorj@concretesolutions.com.br" class="btn-lg btn-master">candidatar-se</a>
 			      </div>
 			    </div>
@@ -389,7 +389,7 @@ title: Carreira
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
-			        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			        <button type="button" class="close" onclick= "document.getElementById('fix-vaga-1').style.display = 'none';">&times;</button>
 			        <h2 class="modal-title" id="myModalLabel">DBA/AD</h2>
 			      </div>
 			      <div class="modal-body">
@@ -421,7 +421,7 @@ title: Carreira
 					<h5>Enviar currículo com assunto [GCDBRJ]</h5>
 				  </div>
 			      <div class="modal-footer">
-					<a type="button" class="btn-lg btn-master" data-dismiss="modal">fechar</a>
+					<a type="button" class="btn-lg btn-master" onclick= "document.getElementById('fix-vaga-1').style.display = 'none';">fechar</a>
 			       	<a href="mailto:rh@fixsupport.com.br" class="btn-lg btn-master">candidatar-se</a>
 			      </div>
 			    </div>
@@ -432,7 +432,7 @@ title: Carreira
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
-			        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			        <button type="button" class="close" onclick= "document.getElementById('fix-vaga-2').style.display = 'none';">&times;</button>
 			        <h2 class="modal-title" id="myModalLabel">Operação Telecom Pleno</h2>
 			      </div>
 			      <div class="modal-body">
@@ -472,7 +472,7 @@ title: Carreira
 						</ul>
 				  </div>
 			      <div class="modal-footer">
-					<a type="button" class="btn-lg btn-master" data-dismiss="modal">fechar</a>
+					<a type="button" class="btn-lg btn-master" onclick= "document.getElementById('fix-vaga-2').style.display = 'none';">fechar</a>
 			       	<a href="mailto:rh@fixsupport.com.br" class="btn-lg btn-master">candidatar-se</a>
 			      </div>
 			    </div>
@@ -483,7 +483,7 @@ title: Carreira
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
-			        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			        <button type="button" class="close" onclick= "document.getElementById('fix-vaga-3').style.display = 'none';">&times;</button>
 			        <h2 class="modal-title" id="myModalLabel">Suporte Publicação</h2>
 			      </div>
 			      <div class="modal-body">
@@ -522,7 +522,7 @@ title: Carreira
 						<h5>Enviar currículo com assunto [gcsprj]</h5>
 				  </div>
 			      <div class="modal-footer">
-					<a type="button" class="btn-lg btn-master" data-dismiss="modal">fechar</a>
+					<a type="button" class="btn-lg btn-master" onclick= "document.getElementById('fix-vaga-3').style.display = 'none';">fechar</a>
 			       	<a href="mailto:rh@fixsupport.com.br" class="btn-lg btn-master">candidatar-se</a>
 			      </div>
 			    </div>
@@ -533,7 +533,7 @@ title: Carreira
 			  <div class="modal-dialog">
 			    <div class="modal-content">
 			      <div class="modal-header">
-			        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			        <button type="button" class="close" onclick= "document.getElementById('fix-vaga-4').style.display = 'none';">&times;</button>
 			        <h2 class="modal-title" id="myModalLabel">Desenvolvedor Web</h2>
 			      </div>
 			      <div class="modal-body">
@@ -567,7 +567,7 @@ title: Carreira
 						<h5>Currículos com assunto [gcwdrj]</h5>
 				  </div>
 			      <div class="modal-footer">
-					<a type="button" class="btn-lg btn-master" data-dismiss="modal">fechar</a>
+					<a type="button" class="btn-lg btn-master" onclick= "document.getElementById('fix-vaga-4').style.display = 'none';">fechar</a>
 			       	<a href="mailto:rh@fixsupport.com.br" class="btn-lg btn-master">candidatar-se</a>
 			      </div>
 			    </div>
