Inclusão do botão fale conosco nos serviços

--- a/o-que-fazemos/index.html
+++ b/o-que-fazemos/index.html
@@ -21,6 +21,9 @@ title: O que fazemos
 			<div class="container">
 				<h2 class="title-service"><span class="purple">//</span> Web</h2>
 				<img src="/img/web.png" alt="Web" class="img-responsive img-service">
+				<div class="center">
+					<a href="mailto:comercial@concretesolutions.com.br" class="btn-lg btn-master text-button">fale conosco</a>
+				</div>
 				<div id="services" class="row">
 					<div class="box-service col-md-3">
 						<div class="row center"><img src="/img/times.png"></div>
@@ -50,6 +53,9 @@ title: O que fazemos
 			<div class="container">
 				<h2 class="title-service"><span class="purple">//</span> Mobile</h2>
 				<img src="/img/mobile.png" alt="Mobile" class="img-responsive img-service">
+				<div class="center">
+					<a href="mailto:comercial@concretesolutions.com.br" class="btn-lg btn-master text-button">fale conosco</a>
+				</div>
 				<div id="services" class="row">
 					<div class="box-service border-right col-md-3">
 						<div class="row center"><img src="/img/multicanal.png"></div>
@@ -78,6 +84,9 @@ title: O que fazemos
 			<div class="container">
 				<h2 class="title-service"><span class="purple">//</span> Cloud</h2>
 				<img src="/img/bg-cloud.jpg" alt="Cloud" class="img-responsive img-service">
+				<div class="center">
+					<a href="mailto:comercial@concretesolutions.com.br" class="btn-lg btn-master text-button">fale conosco</a>
+				</div>
 				<div id="services" class="row">
 					<div class="box-service col-md-3">
 						<div class="row center"><img src="/img/aws.png"></div>
@@ -106,6 +115,9 @@ title: O que fazemos
 			<div class="container">
 				<h2 class="title-service"><span class="purple">//</span> Middleware</h2>
 				<img src="/img/middleware.png" alt="Middleware" class="img-responsive img-service">
+				<div class="center">
+					<a href="mailto:comercial@concretesolutions.com.br" class="btn-lg btn-master text-button">fale conosco</a>
+				</div>
 				<div id="services" class="row">
 					<div class="box-service col-md-3">
 						<div class="row center"><img src="/img/integracao.png"></div>						
